--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: npm install -g @lhci/cli
+      - run: npm ci
       - run: lhci autorun
