--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -37,9 +37,38 @@ jobs:
           path: .lighthouseci/ # Default directory where LHCI stores JSON reports
           if-no-files-found: warn # Warn if no reports found, change to 'error' if critical
 
+  playwright-tests: # New job for Playwright tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18' # Match your project's Node.js version
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npm test # Assumes 'npm test' is configured to run Playwright tests
+
+      - name: Upload Playwright Report
+        if: always() # Upload report even if tests fail
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/ # Default Playwright report directory
+          if-no-files-found: warn
+
   post-summary:
     runs-on: ubuntu-latest
-    needs: lighthouse
+    needs: lighthouse # This job still only depends on lighthouse for the summary
     if: github.event_name == 'pull_request' && always() # Run for PRs, even if lighthouse failed
     permissions:
       contents: read # To checkout the repo
