--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -50,7 +50,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
