--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -3,7 +3,7 @@ name: A11y Check
 on:
   push:
     branches:
-      - main # Adjust to your default branch if different
+      - master # Adjust to your default branch if different
   pull_request:
     types: [opened, synchronize, reopened]
 
