--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Upgrade npm
-        run: npm install -g npm@latest
+        run: npm install npm@latest
 
       - name: Install dependencies
         run: npm i
 
       - name: Install Lighthouse CI
-        run: npm install -g @lhci/cli
+        run: npm install @lhci/cli
 
       - name: Run Lighthouse CI
         run: npm run lhci:autorun
