--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -13,14 +13,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Upgrade npm
-        run: npm install npm@latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.4.x' # Or your project's preferred Node.js version
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm i
-
-      - name: Install Lighthouse CI
-        run: npm install @lhci/cli
 
       - name: Run Lighthouse CI
         run: npm run lhci:autorun
@@ -42,6 +42,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.4.x' # Or your project's preferred Node.js version
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm i
